# MOWEngine

./: .gitignore  CMakeLists.txt
MOWAssimp/: CMakeLists.txt  MOWAssimp.cpp  MOWAssimp.h
MOWCommon/: CMakeLists.txt  MOWInput.cpp  MOWInput.h  MOWSerializer.cpp  MOWSerializer.h  MOWSharedPtr.h  MOWStringConverter.cpp  MOWStringConverter.h  MOWTimer.cpp  MOWTimer.h  MOWTransform.cpp  MOWTransform.h  MOWVector.cpp  MOWVector.h
MOWGraphics/: CMakeLists.txt  MOW2DObject.cpp  MOW2DObject.h  MOWAlignedObject.cpp  MOWAlignedObject.h  MOWBone.cpp  MOWBone.h  MOWBoundingBox.cpp  MOWBoundingBox.h  MOWBox.cpp  MOWBox.h  MOWCamera.cpp  MOWCamera.h  MOWClass.cpp  MOWClass.h  MOWCommon.h  MOWFace.cpp  MOWFace.h  MOWGraphics.cpp  MOWGraphics.h  MOWLight.cpp  MOWLight.h  MOWLightCreator.cpp  MOWLightCreator.h  MOWMaterial.cpp  MOWMaterial.h  MOWModel.cpp  MOWModel.h  MOWModelPart.cpp  MOWModelPart.h  MOWObject.cpp  MOWObject.h  MOWOctTreeNode.cpp  MOWOctTreeNode.h  MOWPointLight.cpp  MOWPointLight.h  MOWRenderableObject.cpp  MOWRenderableObject.h  MOWResourceManager.cpp  MOWResourceManager.h  (+10 more)
MOWMessages/: CMakeLists.txt  MOWCommon.pb.cc  MOWCommon.pb.h  MOWCommon.proto  MOWGraphics.pb.cc  MOWGraphics.pb.h  MOWGraphics.proto  generate_messages.bat
MOWObjParser/: CMakeLists.txt  ObjParser.cpp  ObjParser.h
MOWPhysics/: CMakeLists.txt  IMOWPhysicalEntity.h  IMOWPhysicsWorld.h  MOWPhysics.cpp  MOWPhysics.h
MOWRenderer/: CMakeLists.txt  MOWFrustum.cpp  MOWFrustum.h  MOWRenderToTexture.cpp  MOWRenderToTexture.h  MOWRenderer.cpp  MOWRenderer.h
MOWShaders/: CMakeLists.txt  Color.fx  ColorPixelShader.hlsl  ColorVertexShader.hlsl  Common.fx  Deferred.fx  DeferredPixelShader.hlsl  DeferredVertexShader.hlsl  Deferred_old.fx  DepthPixelShader.hlsl  DepthVertexShader.hlsl  Light.fx  LightPixelShader.hlsl  LightVertexShader.hlsl  MOWColorShader.cpp  MOWColorShader.h  MOWDeferredShader.cpp  MOWDeferredShader.h  MOWDepthShader.cpp  MOWDepthShader.h  MOWLightShader.cpp  MOWLightShader.h  MOWShader.cpp  MOWShader.h  MOWShadowShader.cpp  MOWShadowShader.h  MOWTextureShader.cpp  MOWTextureShader.h  ShaderTypes.h  Shadow.fx  Texture.fx  TexturePixelShader.hlsl  TextureVertexShader.hlsl  resource.h
