cmake_minimum_required(VERSION 3.5)
project(MOWEngine)

set(CMAKE_SUPPRESS_REGENERATION true)
set(BASE_DIR "${CMAKE_CURRENT_LIST_DIR}")
set(EXTERNAL_DIR "${BASE_DIR}/../External")
set(LIBRARY_OUTPUT_PATH "${BASE_DIR}/lib")
set(protobuf_DIR "${EXTERNAL_DIR}/protobuf-2.6.1/src")
set(BUILD_DIR "${BASE_DIR}"/build)
STRING(REGEX REPLACE "/" "\\\\" WIN_BUILD_DIR ${BUILD_DIR})
MESSAGE(STATUS "WIN_BUILD_DIR: " ${WIN_BUILD_DIR})

add_definitions("/MP")
add_subdirectory(MOWGraphics)
add_subdirectory(MOWMessages)
add_subdirectory(MOWRenderer)
add_subdirectory(MOWShaders)
add_subdirectory(MOWCommon)
add_subdirectory(MOWObjParser)
add_subdirectory(MOWPhysics)
